# FlowAutoclicker

./: CMakeLists.txt  LICENSE  README.md  build.ps1
FlowAutoclicker/: CMakeLists.txt  README.md
src/: app.manifest  app.rc  main.cpp
